# chemeleon_aqueous_solubility

./: .gitignore  README.md  baybekov_ksol.csv  inference.py  moe_ffn.py  opt.py  pyproject.toml
notebooks/: analyze_experts.ipynb
src/chemeleon_aqsol/: __main__.py  clean_smiles.py  finetune.py  inference.py  inference_.py  opt.py
src/chemeleon_aqsol/visualize/: visualize.py
